--- a/public/menu/menuLoggedIn.html
+++ b/public/menu/menuLoggedIn.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu</title>
+    <link rel="stylesheet" href="menulog.css">
 </head>
 <body>
-    <input type="text" class="item" name="item" id="item">
-    <button class="addCart">Submit</button>
+    <div class="bckgrnd">
+        <div class="hbck">
+            <div class="h1">
+                <ion-icon name="restaurant-outline"></ion-icon> Enjoy Your Delicious Healthy Meal <ion-icon name="restaurant-outline"></ion-icon>
+            </div>
+        </div>
 
+            <div class="prodisplay">
+                hello
+            </div>
+            <div class="cartdisplay">
+                cart
+            </div>
+        
+    </div>
 
-    <script src="menu.js"></script>
 </body>
 </html>
