--- a/public/about/about.html
+++ b/public/about/about.html
@@ -41,11 +41,11 @@
                  </p>
                  
                  <div class="links">
-                     <h6>connect us on</h6>
+                     <h6>Connect us on</h6>
                        <div class="social">
-                       <a href="#"><i class="fab fa-facebook-f"></i></a>
-                       <a href="#"><i class="fab fa-twitter"></i></a>
-                       <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
                        </div>
                  </div>   
                 
