about,menu.bckvideo

--- a/public/menu/menuLoggedIn.html
+++ b/public/menu/menuLoggedIn.html
@@ -16,13 +16,28 @@
         </div>
 
             <div class="prodisplay">
-                hello
+                <!-- PRODUCTS DISPLAY HERE -->
+                <div class="marg">
+                    <div class="procont">
+                        name
+                        price
+                    </div>
+                    <div class="procont">
+                        name
+                        price
+                    </div>
+                    <div class="procont">
+                        name
+                        price
+                    </div>
+                </div>
+                
             </div>
             <div class="cartdisplay">
-                cart
+                CART HERE
             </div>
         
     </div>
-
+<script src="menu.js"></script>
 </body>
 </html>
