--- a/public/about/about.html
+++ b/public/about/about.html
@@ -10,8 +10,8 @@
     font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6L
     Fnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g
     ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Indian 
-        
+    <title>
+        About
     </title>
 </head>
 <body>
