--- a/public/login/login.html
+++ b/public/login/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home</title>
+    <title>LOGIN</title>
     <link rel="stylesheet" href="/login.css">
 </head>
 <body>
