--- a/public/about/about.html
+++ b/public/about/about.html
@@ -20,10 +20,10 @@
            
         <nav>
             <ul>
-                <li><b><a href="a">Home</a></b></li>
-                <li><a href="a">About us</a></li>
-                <li><a href="a">login</a></li>
-                <li><a href="a">Contact us</a></li>
+                <li><b><a href="a"></a></b></li>
+                <li><a href="a"></a></li>
+                <li><a href="a"></a></li>
+                <li><a href="a"></a></li>
                 
              </ul>
             </nav>
