--- a/public/about/about.html
+++ b/public/about/about.html
@@ -37,15 +37,15 @@
             <div class="bckimg1">
                 <div class="banner">
                     <h1>About us</h1>
-            <p><b>WELCOME to Indiancuisine!!!</b><br>
-              <br>  Our restraunt is known for its warm  decor , authentic  indian  cuisine
-                and  time  honoured  recipes <br>giving  city  experience  in   a
-                welcoming  environment.  We  use the  whole  palette of  flavors-spicy,
-                sour , sweet<br>and  hot  all  the time - making it something  that  wants to 
-                jump  off  the  plate.<br><br>We  always  lay  emphasis  on  customer  satisfaction,
-                and leave no stone unturned to provide<br>you with best service and the best 
+            <p><b>WELCOME to <i>THE  GREEN  COURT</i>!!!</b><br>
+              <br>  Our   restraunt  is  known for  its  warm  decor , authentic  indian  cuisine
+                and  time  honoured  recipes <br>giving  c ity  experience  in   a
+                welcoming  environment.  We  use the  whole   palette of  flavors-spicy,
+                sour , sweet<br>and  hot  all  the time - making  it   something   that  wants to 
+                jump  off  the  plate.<br><br>We  always  lay  emphasis  on   customer  satisfaction,
+                and leave no stone  unturned   to   provide<br>you with   best    service and the best 
                 taste.<br><br><i>NOTE:</i>You can place order by giving us a call or booking online
-                through our website.<br>We are open <span>7 days a week from 10am to 12am.</span>
+                through our website.<br>We  are  open <span>7  days a week from 10am to 12am.</span>
             </p>
             <div class="links">
                 <h6>Connect us on</h6>
