--- a/public/menu/menuLoggedIn.html
+++ b/public/menu/menuLoggedIn.html
@@ -30,6 +30,10 @@
                         name
                         price
                     </div>
+                    <div class="procont">
+                        name
+                        price
+                    </div>
                 </div>
                 
             </div>
