--- a/public/menu/menu.html
+++ b/public/menu/menu.html
@@ -26,14 +26,14 @@
         </div>
         
 <div class="mc">
-    <h2 style="color: red;">Main course</h2>
-    <ul class="crsr" style="color: black;">
-        <li>Butter Chicken---------200</li>
-        <li>Tandoori----------------170</li>
+    <h2 style="color: rgb(226, 50, 15);">Main course</h2>
+    <ul class="crsr" style="color: rgb(6, 7, 7);">
+        <li>Butter Chicken----200</li>
+        <li>Tandoori----170</li>
         <li>Paneer Butter Masala-175</li>
-        <li>Paneer Lababdar------190</li>
-        <li>Dal Makhani-----------150</li>
-        <li>Sarso ka saag----------200</li>
+        <li>Paneer Lababdar----190</li>
+        <li>Dal Makhani----150</li>
+        <li>Sarso ka saag----200</li>
     </ul>
 </div>
 <div class="des">
