New Menu Template

--- a/public/menu/menu.html
+++ b/public/menu/menu.html
@@ -14,7 +14,7 @@
         </div>
         <div class="Ap">
             <h2 style="color: red;">Appetizers</h2>
-               <ul class="crsr" style="color: black;">
+               <ul class="crsr" style="color: rgb(252, 188, 188);">
                 <li>French fries ------67</li>
                 <li>Club Sandwich-----100</li>
                 <li>Pasta---------------67</li>
@@ -27,7 +27,7 @@
         
 <div class="mc">
     <h2 style="color: red;">Main course</h2>
-    <ul class="crsr" style="color: black;">
+    <ul class="crsr" style="color: rgb(252, 188, 188);">
         <li>Butter Chicken---------200</li>
         <li>Tandoori----------------170</li>
         <li>Paneer Butter Masala-175</li>
@@ -38,7 +38,7 @@
 </div>
 <div class="des">
     <h2 style="color: red;">Desserts</h2>
-    <ul class="crsr" style="color:black;">
+    <ul class="crsr" style="color:rgb(252, 188, 188);">
         <li>Chocolate Pastry---150</li>
         <li>Kasata----------------70</li>
         <li>Kulfi------------------65</li>
@@ -49,7 +49,7 @@
 </div>
 <div class="bev">
     <h2 style="color: red;">Beverages</h2>
-    <ul class="crsr" style="color: black;">
+    <ul class="crsr" style="color: rgb(252, 188, 188);">
         <li>Mojito-----------------150</li>
         <li>Fruit Juice-----------45</li>
         <li>Soda------------------75</li>
