--- a/public/menu/menu.html
+++ b/public/menu/menu.html
@@ -13,7 +13,7 @@
             <div class="h1"><ion-icon name="restaurant-outline"></ion-icon> Enjoy Your Delicious Healthy Meal <ion-icon name="restaurant-outline"></ion-icon></div>
         </div>
         <div class="Ap">
-            <h2 style="color: red;">Appetizers</h2>
+            <h2 style="color: rgb(195, 37, 37);">Appetizers</h2>
                <ul class="crsr" style="color: rgb(252, 188, 188);">
                 <li>French fries ------67</li>
                 <li>Club Sandwich-----100</li>
