--- a/public/login/login.html
+++ b/public/login/login.html
@@ -9,7 +9,7 @@
         <div class="headcontainer">
             <div class="logo">
                 <div class="logoname">
-                    INDIANCUSINE
+                    THE GREEN COURT
                 </div>
                 
             </div>
