--- a/public/login/login1.html
+++ b/public/login/login1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>LOGIN/REGISTER</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="login1.css">
 </head>
 <body>
     <div class="full-page">
