--- a/public/login/login1.html
+++ b/public/login/login1.html
@@ -13,10 +13,10 @@
             </div>
             <nav>
                 <ul id='MenuItems'>
-                    <li><a href='#'>Home</a></li>
-                    <li><a href='#'>About</a></li>
-                    <li><a href='#'>Menu</a></li>
-                    <li><a href='#'>Contact</a></li>
+                    <li><a href='/'>Home</a></li>
+                    <li><a href='/about'>About</a></li>
+                    <li><a href='/menu'>Menu</a></li>
+                    <li><a href='/contact'>Contact</a></li>
                     <li><button class='loginbtn' onclick="document.getElementById('login-form').style.display='block'" style="width:auto;">Login</button></li>
                 </ul>
             </nav>
@@ -32,16 +32,16 @@
                     <input type='text'class='input-field username'placeholder='Username' required >
 		            <input type='password'class='input-field password'placeholder='Enter Password' required>
 		            <input type='checkbox'class='check-box'><span>Remember Password</span>
-		            <button type='submit'class='submit-btn'>Log in</button>
+		            <button type='submit'class='submit-btn submitLogin'>Log in</button>
 		        </form>
-		 <form id='register' class='input-group-register'>
-		     <input type='text'class='input-field username'placeholder='Username' required>
-		     <input type='email'class='input-field email'placeholder='Email Id' required>
-		     <input type='password'class='input-field password'placeholder='Enter Password' required>
-		     <input type='password'class='input-field'placeholder='Confirm Password'  required>
-		     <input type='checkbox'class='check-box'><span>I agree to the terms and                                                   conditions</span>
-                    <button type='submit'class='submit-btn'>Register</button>
-	         </form>
+		        <form id='register' class='input-group-register register'>
+		            <input type='text'class='input-field usernamer'placeholder='Username' required>
+		            <input type='email'class='input-field email'placeholder='Email Id' required>
+		            <input type='password'class='input-field passwordr'placeholder='Enter Password' required>
+		            <input type='password'class='input-field'placeholder='Confirm Password'  required>
+		            <input type='checkbox'class='check-box'><span>I agree to the terms and conditions</span>
+                    <button type='submit'class='submit-btn submitRegister'>Register</button>
+	            </form>
             </div>
         </div>
     </div>
@@ -72,5 +72,8 @@
             }
         }
     </script>
+    <script src="login.js"></script>
+    <script src="register.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 </html>
