--- a/public/menu/menu.html
+++ b/public/menu/menu.html
@@ -71,15 +71,15 @@
             </ul>
         </div>
         <div class="bev">
-            <h2 style="color: rgb(11, 112, 94);">Veg Main Course</h2>
+            <h2 style="color: rgb(11, 112, 94);"> Non-Veg Main Course</h2>
             <ul class="crsr" style="color:rgba(248, 227, 227, 0.94);">
-                <li>Paneer Tikka Masala---284</li>
-                <li>Paneer Do Piyaza--310</li>
-                <li>Paneer Laziz--284</li>
-                <li>Paneer chaska Maska--284</li>
-                <li>kaju curry--297</li>
-                <li>veg panjabi Handi--246</li>
-                <li>Mushroom Masala--246</li>
+                <li>Chicken kadai---260</li>
+                <li>Chicken Rajdhani--310</li>
+                <li>Mutton kheema--300</li>
+                <li>Muttton Rahara--320</li>
+                <li>Fish Malwani--297</li>
+                <li>Fish Amritsari--260</li>
+                <li>Chicken Chilly Gravy--300</li>
             </ul>
         </div>
     </div>
