--- a/public/menu/menu.html
+++ b/public/menu/menu.html
@@ -14,14 +14,14 @@
         </div>
         <div class="Ap">
 
-            <h2 style="color: rgb(11, 112, 94);">Appetizers</h2>
+            <!-- <h2 style="color: rgb(11, 112, 94);">Appetizers</h2>
                <ul class="crsr" style="color: rgb(252, 188, 188);">
                 <li>French fries ------67</li>
                 <li>Club Sandwich-----100</li>
                 <li>Pasta---------------67</li>
                 <li>Masala Papad-----100</li>
                 <li>Tomato Soup------120</li>
-                <li>Chicken Lolipop--90</li>
+                <li>Chicken Lolipop--90</li> -->
 
             <h2 style="color: rgb(7, 97, 81);">Soup & Salad</h2>
                <ul class="crsr" style="color: rgba(248, 227, 227, 0.94);">
