--- a/public/login/login1.html
+++ b/public/login/login1.html
@@ -9,7 +9,7 @@
     <div class="full-page">
         <div class="navbar">
             <div>
-                <a href='contact.html'>THE GREEN COURT</a>
+                <a href='contact.html'></a>
             </div>
             <nav>
                 <ul id='MenuItems'>
